Fix media query regarding nav menu elements overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -520,12 +520,12 @@ iframe {
     }
 
     #navigation {
-        font-size: 110%;
+        font-size: 105%;
     }
 
     #navigation li {
         white-space: normal;
-        margin-right: 8px;
+        margin-right: 7px;
     }
 
     #hero-text {
